--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ dependencies {
     implementation 'com.googlecode.lanterna:lanterna:3.1.1' // Lanterna dependency
     testImplementation(platform("org.junit:junit-bom:5.9.1"))
     testImplementation("org.junit.jupiter:junit-jupiter")
+    testImplementation 'org.mockito:mockito-core:3.7.7'
+    testImplementation 'junit:junit:4.13.2'
+
 }
 
 tasks.test {
