--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter")
     testImplementation 'org.mockito:mockito-core:3.7.7'
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.testng:testng:7.1.0'
 
 }
 
